[app] prevent overflow in entry list item

--- a/app/feedr/public/scss/partials/_entry_list.scss
+++ b/app/feedr/public/scss/partials/_entry_list.scss
@@ -6,7 +6,12 @@
     @extend .feedr-list-item;
 }
 
+.feedr-feed-title {
+    @include text-overflow;
+}
+
 .feedr-entry-title {
+    @include text-overflow;
     font-weight: 600;
 }
 
